--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "14.2.29",
+    "nextjs-toploader": "^3.8.16",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.3.0",
