--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@tiptap/extension-highlight": "^2.12.0",
@@ -24,9 +26,11 @@
     "nextjs-toploader": "^3.8.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.56.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tiptap-extension-resize-image": "^1.2.2"
+    "tiptap-extension-resize-image": "^1.2.2",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/node": "^20",
