--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/starter-kit": "^2.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "14.2.29",
     "nextjs-toploader": "^3.8.16",
@@ -29,12 +30,14 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.2",
     "zod": "^3.25.28"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
