developed: reset password feature

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
  DATABASE_URL="mongodb+srv://monirbdcalling:u8CcvenpMwsQEYWa@cluster0.ck3o8os.mongodb.net/test"
+
+
+#RESEND
+RESEND_API_KEY=re_NPeMjGXb_Py38H18wCqzVLqpGZybNwK8H
