--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "email": "email dev --dir src/email-templates"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -16,6 +18,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
+    "@react-email/components": "^0.0.41",
     "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-image": "^2.12.0",
     "@tiptap/extension-text-align": "^2.12.0",
@@ -32,6 +35,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -47,6 +51,7 @@
     "eslint-config-next": "14.2.29",
     "postcss": "^8",
     "prisma": "^6.8.2",
+    "react-email": "4.0.15",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
