developed: login feature

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@
 
 #RESEND
 RESEND_API_KEY=re_NPeMjGXb_Py38H18wCqzVLqpGZybNwK8H
+
+# NEXT AUTH
+AUTH_SECRET="wN9n2MaXLFlJyDmaVFuWniLaH8psluUy0VdSxV6pDUY="
