--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "email": "email dev --dir src/email-templates"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@react-email/components": "^0.0.41",
@@ -30,12 +34,14 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "14.2.29",
+    "next-auth": "^5.0.0-beta.28",
     "nextjs-toploader": "^3.8.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "resend": "^4.5.1",
+    "sharp": "^0.34.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
