--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.12.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "14.2.29",
