--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ RESEND_API_KEY=re_NPeMjGXb_Py38H18wCqzVLqpGZybNwK8H
 
 # NEXT AUTH
 AUTH_SECRET="wN9n2MaXLFlJyDmaVFuWniLaH8psluUy0VdSxV6pDUY="
+AUTH_URL="http://localhost:3000"
