--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^12.12.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "next": "14.2.29",
     "next-auth": "^5.0.0-beta.28",
     "nextjs-toploader": "^3.8.16",
