--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@react-email/components": "^0.0.41",
+    "@tanstack/react-query": "^5.77.0",
     "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-image": "^2.12.0",
     "@tiptap/extension-text-align": "^2.12.0",
@@ -32,6 +35,8 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.12.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
@@ -40,6 +45,7 @@
     "next-auth": "^5.0.0-beta.28",
     "nextjs-toploader": "^3.8.16",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
@@ -52,6 +58,7 @@
     "zod": "^3.25.28"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
