--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.12.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
