--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "14.2.29",
     "next-auth": "^5.0.0-beta.28",
     "nextjs-toploader": "^3.8.16",
+    "openai": "^4.103.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -56,7 +57,8 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.2",
-    "zod": "^3.25.28"
+    "zod": "^3.25.28",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.74.7",
