--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.14",
@@ -27,6 +28,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@react-email/components": "^0.0.41",
     "@tanstack/react-query": "^5.77.0",
+    "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-image": "^2.12.0",
     "@tiptap/extension-text-align": "^2.12.0",
