--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ AUTH_URL="http://localhost:3000"
 # Paddle
 PADDLE_API_KEY="pdl_sdbx_apikey_01jwdpmw0kkkrk2r6j76yhhpc7_R2QmDttPE4QFH71D8aenGp_Awb"
 NEXT_PUBLIC_PADDLE_TOKEN="test_98045528a8de8da6627a6145ca0"
+PADDLE_WEBHOOK_SECRET=pdl_ntfset_01jwe7wv43w9dkqzf6yncrqj8a_teFbGmvrUh1UKNimMKP0xofhHKGX5oTs
