--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.12.2",
+    "fuse.js": "^7.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
