developed: contact us form functionality

--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ AUTH_URL="http://localhost:3000"
 PADDLE_API_KEY="pdl_sdbx_apikey_01jwdpmw0kkkrk2r6j76yhhpc7_R2QmDttPE4QFH71D8aenGp_Awb"
 NEXT_PUBLIC_PADDLE_TOKEN="test_98045528a8de8da6627a6145ca0"
 PADDLE_WEBHOOK_SECRET="pdl_ntfset_01jwq9ngv4e9kjbjchbcn1vrt5_yrdUj/8dn9iNGclpmkeNvee0uruU/t8g"
+
+
+# contact
+ADMIN_EMAIL="monir.bdcalling@gmail.com"
