developed: full profile edit feature

--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@ PADDLE_WEBHOOK_SECRET="pdl_ntfset_01jwqy3dndx7zbn0h0qab0w9vb_4KTeI8+wCDTCIFdPkkH
 
 # contact
 ADMIN_EMAIL="monir.bdcalling@gmail.com"
+
+# EDGE STORE
+EDGE_STORE_ACCESS_KEY=kskGtQDDY6FFa4eph1CPj5U8GLuwecmJ
+EDGE_STORE_SECRET_KEY=h57QFfLJzNAcRpavWSoD7dBcxzMFwqOGYAkuZu9Rdq01fIPr
