--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ AUTH_URL="http://localhost:3000"
 PADDLE_API_KEY="pdl_sdbx_apikey_01jwdpmw0kkkrk2r6j76yhhpc7_R2QmDttPE4QFH71D8aenGp_Awb"
 NEXT_PUBLIC_PADDLE_TOKEN="test_98045528a8de8da6627a6145ca0"
 PADDLE_WEBHOOK_SECRET="pdl_ntfset_01jwqy3dndx7zbn0h0qab0w9vb_4KTeI8+wCDTCIFdPkkH4ikJ+A74s3Yw6"
+NEXT_PUBLIC_PRICE_ID=pri_01jwbf7deypnwz4jya27m0nzjq
 
 
 # contact
@@ -22,3 +23,4 @@ ADMIN_EMAIL="monir.bdcalling@gmail.com"
 # EDGE STORE
 EDGE_STORE_ACCESS_KEY=kskGtQDDY6FFa4eph1CPj5U8GLuwecmJ
 EDGE_STORE_SECRET_KEY=h57QFfLJzNAcRpavWSoD7dBcxzMFwqOGYAkuZu9Rdq01fIPr
+
