--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ ADMIN_EMAIL="monir.bdcalling@gmail.com"
 EDGE_STORE_ACCESS_KEY=kskGtQDDY6FFa4eph1CPj5U8GLuwecmJ
 EDGE_STORE_SECRET_KEY=h57QFfLJzNAcRpavWSoD7dBcxzMFwqOGYAkuZu9Rdq01fIPr
 
+# Google Analytics
+GOOGLE_ANALYTICS_ID=G-HH212P32T5
+
