--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@edgestore/react": "^0.5.2",
     "@edgestore/server": "^0.5.2",
     "@hookform/resolvers": "^5.0.1",
+    "@next/third-parties": "^15.3.3",
     "@paddle/paddle-js": "^1.4.1",
     "@paddle/paddle-node-sdk": "^2.7.2",
     "@prisma/client": "^6.8.2",
