--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "resend": "^4.5.1",
     "sharp": "^0.34.2",
     "sonner": "^2.0.3",
+    "striptags": "^3.2.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.2",
