--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^12.12.2",
     "fuse.js": "^7.1.0",
     "js-cookie": "^3.0.5",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "next": "14.2.29",
