fixed: documents issue

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database
- DATABASE_URL="mongodb+srv://monirbdcalling:u8CcvenpMwsQEYWa@cluster0.ck3o8os.mongodb.net/test"
+ DATABASE_URL="mongodb+srv://rrivera:rKCLyY4SslAMlJXc@cluster0.nckm0qo.mongodb.net/production?retryWrites=true&w=majority&appName=Cluster0"
 
 
 #RESEND
