updatedL highlight section

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.2",
+    "vaul": "^1.1.2",
     "xss": "^1.0.15",
     "zod": "^3.25.49",
     "zustand": "^5.0.5"
