--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "resend": "^4.5.1",
     "sharp": "^0.34.2",
     "sonner": "^2.0.3",
