--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tiptap/extension-text-align": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
+    "@upstash/redis": "^1.35.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
