--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/third-parties": "^15.3.3",
     "@paddle/paddle-js": "^1.4.1",
     "@paddle/paddle-node-sdk": "^2.7.2",
+    "@plaiceholder/next": "^3.0.0",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -57,6 +58,7 @@
     "next-auth": "^5.0.0-beta.28",
     "nextjs-toploader": "^3.8.16",
     "openai": "^4.103.0",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -64,7 +66,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "resend": "^4.5.1",
-    "sharp": "^0.34.2",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.3",
     "striptags": "^3.2.0",
     "swr": "^2.3.6",
